fix footer items on tablet (#182)

--- a/static/assets/resources/css/responsive.css
+++ b/static/assets/resources/css/responsive.css
@@ -172,7 +172,13 @@
     }
 }
 
+@media (min-width:768px) {
+    .row.col-p30 { margin-left:-15px; margin-right:-15px; }
+}
 
+@media (min-width:1200px) {
+    .row.col-p30 { margin-left:-30px; margin-right:-30px; }
+}
 
 
 
